# media-resolver

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: build_windows.ps1  fetch_binaries.py  run_dev.ps1
src/media_resolver/: app.py  wizard.py
src/media_resolver/core/: display.py  matching.py  models.py  naming.py  quality.py  resolver.py  tools.py
src/media_resolver/metadata/: merger.py  public.py
src/media_resolver/processing/: ffprobe.py  sidecars.py  tagger.py
src/media_resolver/providers/: archive_provider.py  audius_provider.py  bandcamp_provider.py  direct_provider.py  local_provider.py  tidal_provider.py  torrent_provider.py  ytdlp_provider.py
src/media_resolver/versions/: album_diff.py  archive_plan.py  fingerprint.py  release_resolver.py
tests/: test_archive.py  test_metadata_authority.py  test_naming.py  test_ranking.py  test_sources.py  test_ytdlp_provider.py
